# Design-Patterns

./: README.md
C++/CreationalPatterns/AbstractFactory/: CMakeLists.txt  ICPUManagementInterface.h  IMemoryManagementInterface.h  main.cpp
C++/CreationalPatterns/AbstractFactory/Mac/: CMacOSCPUImplmentation.cpp  CMacOSMemoryImplementation.cpp
C++/CreationalPatterns/AbstractFactory/Windows/: CWindowsOSMemoryImplementation.cpp  (+2 more)
C++/CreationalPatterns/FactoryMethod/: IMemoryManagementInterface.h  IPlatformInterface.h
CreationalPatterns/AbstractFactory/: CMakeLists.txt  ICPUManagementInterface.h  IMemoryManagementInterface.h  IPlatformInterface.h  Platform.h  main.cpp
CreationalPatterns/AbstractFactory/Mac/: CMacOSCPUImplementation.h  CMacOSCPUImplmentation.cpp  CMacOSPlatform.cpp  CMacOSPlatform.h
CreationalPatterns/AbstractFactory/Windows/: CWindowsOSCPUImplementation.cpp  CWindowsOSCPUImplementation.h  CWindowsOSMemoryImplementation.h  CWindowsOSPlatform.cpp  CWindowsOSPlatform.h
CreationalPatterns/FactoryMethod/: CMacOSMemoryImplementation.cpp  CMacOSMemoryImplementation.h  CMacOSPlatform.h  CMakeLists.txt  CPlatformEnum.h  CPlatformType.h  CWindowsOSMemoryImplementation.cpp  CWindowsOSMemoryImplementation.h  CWindowsOSPlatform.h  FactoryMethod.txt  IMemoryManagementInterface.h  IPlatformInterface.h  Makefile  factoryCreationalPattern  main.cpp
CreationalPatterns/FactoryMethod/Mac/: CMacOSMemoryImplementation.h  CMacOSPlatform.h
CreationalPatterns/FactoryMethod/Windows/: CWindowsOSMemoryImplementation.h  CWindowsOSPlatform.cpp  CWindowsOSPlatform.h
(+3 files in other folders)
